--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 							<div class="col-md-4">
 								<h3><span class="glyphicon glyphicon-wrench"></span>  Development</h3>
-								<p>Use what we've built to write your own projects! See our documention (coming soon), or contribute at <a href="https://github.com/backpacker69/cointoolkit">github</a>.</p>
+								<p>Use what we've built to write your own projects! See our documention (coming soon), or contribute at <a href="https://github.com/jommy99/cointoolkit">github</a>.</p>
 							</div>
 						</div>
 					</div>
